Changed the Look and Feel of the GUI. Implemented the WebLaF from http://weblookandfeel.com/ . Has to change how background colors of buttons were set to support the WebLaF library. Also restructured some of the packages. Any and all resources are now located in the resource package. Calls to MARS were updated to support the package change.